style.css
body {
  margin: 0;
  box-sizing: border-box;
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: 10vh 85vh 5vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 14px;
  background-color: magenta;
}

a {
}

a:link {
  color: black;
}

a:visited {
  color: black;
}

a:focus {
}

a:hover {
  color: magenta;
}

a:active {
}

nav {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;

  height: 10vh;
  background-color: magenta;
}

nav div {
  margin: 10px;
  font-size: 28px;
  color: black;
}

aside {
  display: grid;
  grid-template-rows: 0fr 0fr 0fr 1fr;
  flex-direction: column;
  justify-content: baseline;
  align-items: start;
  background-color: lightgray;
  font-weight: 600;
  text-align: left;
  padding-left: 15px;
  padding-top: 50px;
  padding-right: 10px;
  padding-bottom: 30px;
  line-height: 30px;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: lightgray;
  overflow: auto;
  text-align: center;
}

.article {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  gap: inherit;
}

article {
  padding: 50px;
  border: 2px dotted rgb(11, 11, 11);
  border-radius: 5px;
  margin: 20px;
  background-color: white;
}

footer {
  background-color: magenta;
  font-size: xx-small;
}

.holder {
  background: ;
  padding: 5rem;
  overflow: hidden;
}
.news {
  animation: slide 10s linear infinite;
}

@keyframes slide {
  0% {
    transform: translatex(0%);
  }

  100% {
    transform: translatex(100%);
  }
}
.flex-ctr {
  display: flex;
  justify-content: center;
  align-items: center;
}

nav,
footer {
  grid-column: span 2;
}

